SERVER-63233 Do oplog recovery of data after the checkpointTimestamp (or extended timestamp) on the              syncing node.  This will result in fast count being correct nearly all the time.

GitOrigin-RevId: ec2275bfdf120b5e457e8be078a6bd173c5432c5