src/mongo/db/modules/enterprise/jstests/fcbis/fcbis_applies_oplog_after_checkpoint.js
@@ -1,5 +1,6 @@
 /**
- * Tests that appliedThrough is cleared after FCBIS.
+ * Tests that oplog entries not part of the stable snapshot on the syncing node are applied
+ * when no extensions are used.
  * @tags: [requires_fcv_52, requires_persistence, requires_wiredtiger]
  */
 (function() {
@@ -44,34 +45,38 @@ assert.commandWorked(
     primary.adminCommand({configureFailPoint: "disableSnapshotting", mode: "alwaysOn"}));
 jsTestLog("Doing more writes after stopping stable checkpoints");
 assert.commandWorked(primaryDb.runCommand(
-    {insert: "test", documents: [{a: 4}, {a: 5}, {a: 6}], writeConcern: {w: 1}}));
+    {insert: "test", documents: [{a: 4}, {a: 5}, {a: 6}, {a: 7}], writeConcern: {w: 1}}));
 
 jsTestLog("Adding the initial sync destination node to the replica set");
 const initialSyncNode = rst.add({
     rsConfig: {priority: 0, votes: 0},
     setParameter: {
         'initialSyncMethod': 'fileCopyBased',
-        'failpoint.fCBISForceExtendBackupCursor': tojson({mode: {times: 1}}),
+        // Avoid extension.
+        'fileBasedInitialSyncMaxCyclesWithoutProgress': 1,
+        // Don't start steady state replication.
+        'failpoint.stopReplProducer': tojson({mode: 'alwaysOn'}),
         'numInitialSyncAttempts': 1,
         'logComponentVerbosity': tojson({replication: {verbosity: 1, initialSync: 2}})
     }
 });
 rst.reInitiate();
-
-assert.commandWorked(initialSyncNode.adminCommand({
-    waitForFailPoint: 'fCBISForceExtendBackupCursor',
-    timesEntered: 1,
-    maxTimeMS: kDefaultWaitForFailPointTimeout
-}));
-assert.commandWorked(
-    primary.adminCommand({configureFailPoint: "disableSnapshotting", mode: "off"}));
-// Do more writes to trigger a new stable checkpoint on the primary.
-assert.commandWorked(primaryDb.test.insert([{a: 7}, {b: 8}, {c: 9}]));
-
 rst.waitForState(initialSyncNode, ReplSetTest.State.SECONDARY);
 
-const minValid = initialSyncNode.getCollection('local.replset.minvalid').findOne();
-assert(!minValid.hasOwnProperty('begin'), tojson(minValid));
+const initialSyncNodeDb = initialSyncNode.getDB("test");
+// Fast count should be accurate because backup syncs size storer immediately before
+// opening WT backup cursor.
+assert.eq(7, initialSyncNodeDb.test.count());
 
+// If we didn't actually apply the oplog entries, the actual count will be wrong.
+assert.eq(7, initialSyncNodeDb.test.find({}).itcount());
+
+assert.commandWorked(
+    initialSyncNode.adminCommand({configureFailPoint: "stopReplProducer", mode: "off"}));
+assert.commandWorked(
+    primary.adminCommand({configureFailPoint: "disableSnapshotting", mode: "off"}));
+
+// If we erroneously re-apply the oplog entries after restarting replication it will show up
+// as an incorrect fast count in validation.
 rst.stopSet();
 })();
